// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should add a response 1`] = `
<List
  onAddResponse={[Function]}
  onNextStep={[Function]}
  responses={Array []}
  step={1}
/>
`;

exports[`Should add a response 2`] = `
<List
  onAddResponse={[Function]}
  onNextStep={[Function]}
  responses={
    Array [
      Object {
        "response": true,
      },
    ]
  }
  step={1}
/>
`;

exports[`Should add a step on click 1`] = `
<List
  onAddResponse={[Function]}
  onNextStep={[Function]}
  responses={Array []}
  step={0}
/>
`;

exports[`Should add a step on click 2`] = `
<List
  onAddResponse={[Function]}
  onNextStep={[Function]}
  responses={Array []}
  step={1}
/>
`;

exports[`Should render 1`] = `
<List
  onAddResponse={[Function]}
  onNextStep={[Function]}
  responses={Array []}
  step={0}
/>
`;
